objects/Lookup__c.object
<CustomObject>
    <fields>
        <fullName>Account_Bank__c</fullName>
        <label>Account Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Branch__c</fullName>
        <label>Account Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Group__c</fullName>
        <label>Approval Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>Four</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greater_than__c</fullName>
        <label>Greater than</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Less_than__c</fullName>
        <label>Less than</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lookup</label>
    <nameField>
        <displayFormat>LUP-{0}</displayFormat>
        <label>Lookup #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookups</pluralLabel>
    <recordTypes>
        <fullName>Agency_Bank_Detail</fullName>
        <active>true</active>
        <label>Agency Bank Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_Quote_Request</fullName>
        <active>true</active>
        <label>Legal Quote Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Litigation_User_Approval_Levels</fullName>
        <active>true</active>
        <description>Litigation User Approval Levels</description>
        <label>Litigation User Approval Levels</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>